# privacy-messenger

./: .gitignore  .pre-commit-config.yaml  README.md
back/: pyproject.toml
back/app/: main.py
back/app/core/: logging.py
back/app/settings/: __init__.py  common.py
hooks/: commit-msg-check.sh
